# tmax

./: .gitignore  README.md  manage_access_dates.py  pyproject.toml
TassieAgent/: agent.py
Vanillux2Agent/: agent.py
VanilluxAgent/: __init__.py  agent.py
beaker_configs/: launch_eval.sh  launch_vllm.sh
rl_data/: README.md  __init__.py  analyze.py  generate_solutions.py  generate_tasks.py  upload_to_hf.py
rl_data/comparison/: cli.py  core.py  modules.py  preview_palettes.py  styles.py
rl_data/containers/: base_intricate.def
rl_data/generator/: __init__.py  apptainer_def_gen.py  completion_test_gen.py  container_def_patch.py  env.py  fixture_gen.py  initial_state_test_gen.py  sample_solutions.py  task_template_gen.py  vanillux_prompts.yaml  vanillux_solver.py
rl_data/scripts/: README.md  classify_difficulty.py  predownload_model.sh  run_analyze.sh  run_generate_solutions.sh  run_generate_tasks.sh  upload_data_to_hf.sh
scripts/: clean_errors.sh  compute_stats.py  run_rldata_claude.sh  run_rldata_claude_test.sh  run_swebench100_claude.sh  run_swebench100_openai.sh  run_swebench_claude.sh  run_swebench_openai.sh  run_tb2_claude.sh  run_tb2_gemini_tassie.sh  run_tb2_gemini_vanillux.sh  run_tb2_openai.sh  run_tblite_claude.sh  run_tblite_openai.sh  swebench100_tasks.txt
scripts/analysis/: analyze_tb2_eval.py  compare_smoke_harnesses.py  tb2_gemini_tassieagent_eval.md
scripts/beaker/: run_eval_in_job.sh
scripts/plot/: teaser_terminal_bench.py  terminal_bench_results.csv
sft/: data.py  pre_tokenize.py  run_pretokenize.sh  run_sft.sh  train.py
(+78 files in other folders)
