[project]
name = "tmax"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "harbor",
    "litellm",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sft", "TassieAgent"]

[project.optional-dependencies]
sft = [
    "trl>=0.29.0",
    "transformers>=5.2.0",
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "pyarrow>=23.0.1",
    "torch",
    "tensorboard",
]
